--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
 blinker==1.6.2
 click==8.1.5
 colorama==0.4.6
+cssbeautifier==1.14.9
+djlint==1.32.1
+dominate==2.8.0
+EditorConfig==0.12.3
 Flask==2.3.2
+Flask-Bootstrap==3.3.7.1
+html-tag-names==0.1.2
+html-void-elements==0.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsbeautifier==1.14.9
+json5==0.9.14
 MarkupSafe==2.1.3
+pathspec==0.11.1
+PyYAML==6.0.1
+regex==2023.6.3
+six==1.16.0
+tqdm==4.65.0
+visitor==0.1.3
 Werkzeug==2.3.6
