--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ dominate==2.8.0
 EditorConfig==0.12.3
 Flask==2.3.2
 Flask-Bootstrap==3.3.7.1
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+greenlet==2.0.2
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 itsdangerous==2.1.2
@@ -18,6 +21,9 @@ pathspec==0.11.1
 PyYAML==6.0.1
 regex==2023.6.3
 six==1.16.0
+SQLAlchemy==2.0.19
 tqdm==4.65.0
+typing_extensions==4.7.1
 visitor==0.1.3
 Werkzeug==2.3.6
+WTForms==3.0.1
